{
    "name": "InputMap",
    "maps": [
        {
            "name": "CarInput",
            "id": "9cd5cca6-2c01-4cc1-bd8e-6a6644fac920",
            "actions": [
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "65181d17-02ff-433e-a17d-a562a1d55813",
                    "expectedControlType": "Button",
                    "processors": "AxisDeadzone",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Throttle",
                    "type": "Value",
                    "id": "69ff6228-bfb6-4bc5-a277-84407eb7538a",
                    "expectedControlType": "Button",
                    "processors": "AxisDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Steering",
                    "type": "Value",
                    "id": "2bb2a35b-f07c-4f51-b4d2-6e102cb56abc",
                    "expectedControlType": "Button",
                    "processors": "AxisDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotation",
                    "type": "Value",
                    "id": "c126c30c-88f5-4892-8be3-35c574c92933",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cce1499d-b79c-4b56-a7b0-e59d1a376b98",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdddeb11-e5a4-4f16-a0a8-255462f91754",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Throttle Axis",
                    "id": "fd2e5090-2a16-465d-bdce-1e63e5068a96",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "41c6f890-cf1a-43b8-8b19-08d7a95b0554",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "702eaddf-7113-4188-8352-32df4e3e78b5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Throttle Axis",
                    "id": "709fc4ce-dffb-4bbb-95ac-2f702c364b5c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "12c351a0-bb88-4101-a07f-b881fd2394e2",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "814aed4d-2230-4e3c-92b1-ff9034feb729",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Steering Axis",
                    "id": "d2544642-080b-4b14-9b3c-6b6499afe6f9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bfc2594f-1966-4acd-b394-936fe2ee04b8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "495184a1-386c-4a67-a808-b8fcc5143686",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Steering Axis",
                    "id": "ecf7132d-e1aa-49be-bb96-95ed55a03c1e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7fbe1ba4-c025-47eb-8a6e-2579d216a669",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3a587b15-a331-4f8f-a205-e3907db41226",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5ad079df-128c-41f2-926d-d7626116df4a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}